# zoom_bot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml
lib/zoomsdk/h/: meeting_service_interface.h  setting_service_interface.h
lib/zoomsdk/h/meeting_service_components/: meeting_chat_interface.h  meeting_video_interface.h
lib/zoomsdk/json/: translations.json
src/: Config.cpp  Config.h  Zoom.cpp  Zoom.h  main.cpp
src/events/: AuthServiceEvent.cpp  MeetingRecordingCtrlEvent.cpp  MeetingRecordingCtrlEvent.h  MeetingReminderEvent.cpp  MeetingServiceEvent.cpp
src/raw_record/: ZoomSDKAudioRawDataDelegate.cpp  ZoomSDKAudioRawDataDelegate.h  ZoomSDKRendererDelegate.cpp  ZoomSDKRendererDelegate.h
